deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-deployment
  namespace: cicd-project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quarkus-deployment
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: quarkus-deployment
    spec:
      containers:
        - name: container
          image: 'image-registry.openshift-image-registry.svc:5000/cicd-project/cicd-image'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
