quarkus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-service
  namespace: cicd-project
spec:
  selector:
    app: quarkus-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8001
