quarkus-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quarkus-route
  namespace: cicd-project
  labels:
    app.kubernetes.io/instance: quarkus-app
spec:
  to:
    kind: Service
    name: quarkus-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 8001
